@@ -35,8 +35,8 @@ int cmd_newfolder (const CmdContext *context, int argc, char **argv)
 
   if (argc < 2)
     {
-    log_error ("%s: this command takes one or more arguments\n",
-      argv[0]);
+    log_error ("%s: %s: this command takes one or more arguments\n",
+      ERROR_USAGE, argv[0]);
     OUT
     return EINVAL;
     }
@@ -64,7 +64,7 @@ int cmd_newfolder (const CmdContext *context, int argc, char **argv)
         }
       else
         {
-        log_error ("%s: %s\n", argv[0],  
+        log_error ("%s: %s", argv[0],  
           ERROR_STARTSLASH);
         free (error);
         }
